Fixed flickering.

--- a/css/map.css
+++ b/css/map.css
@@ -8,6 +8,7 @@
   flex-direction: column;
 }
 #map_view {
+  background-color: #aaaaaa;
   position: relative;
   order: 1;
   flex: 1 1 0;
